Changed layout of Sign Up Page began re-styling footer as issues with spacing on sign up page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -275,6 +275,16 @@ nav a:hover {
 
 /* social links */
 
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: red;
+  color: white;
+  text-align: center;
+  height: 40px;
+}
 
 .social-networks {
     text-align: center;
@@ -304,7 +314,7 @@ nav a:hover {
 	.signup-form {
 		width: 900px;
 		margin: 0 auto;
-        padding-top: 80px;
+        padding-top: 100px;
 	}
     .signup-form form {
 		color: #fff;
@@ -397,4 +407,54 @@ nav a:hover {
     .signup-form {
         max-width: 140px;
     }
+}
+
+.modal-body {
+    color: #666
+}
+
+.modal-title {
+    color: #666;
+}
+
+.divider-text {
+    position: relative;
+    text-align: center;
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+.divider-text span {
+    padding: 7px;
+    font-size: 12px;
+    position: relative;   
+    z-index: 2;
+}
+.divider-text:after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    border-bottom: 1px solid #ddd;
+    top: 55%;
+    left: 0;
+    z-index: 1;
+}
+
+.btn-facebook {
+    background-color: #405D9D;
+    color: #fff;
+}
+.btn-twitter {
+    background-color: #42AEEC;
+    color: #fff;
+}
+
+.sign-up-card {
+    padding-top: 60px;
+    align-content: center;
+    background-color: rgba(187, 6, 39, .7);
+}
+
+.sign-up-button {
+    align-content: center;
+    padding-right: 10px;
 }
